--- a/NetIpTools/NetIpTools.csproj
+++ b/NetIpTools/NetIpTools.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Salih YILDIRIM</Authors>
+    <PackageProjectUrl>https://github.com/salihy/NetIpTools</PackageProjectUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/salihy/NetIpTools</RepositoryUrl>
+    <Description>This library let you do some Ip Address operations</Description>
   </PropertyGroup>
 
 </Project>
